--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
-<!DOCTYPE html><html lang="en"><head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-  <meta charset="utf-8">
-  <title>Unlawful Reign</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style type="text/css">@font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/materialicons/v141/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');}.material-icons{font-family:'Material Icons';font-weight:normal;font-style:normal;font-size:24px;line-height:1;letter-spacing:normal;text-transform:none;display:inline-block;white-space:nowrap;word-wrap:normal;direction:ltr;-webkit-font-feature-settings:'liga';-webkit-font-smoothing:antialiased;}</style>
-<style>html,body,app-root{max-height:100vh;max-width:100%;overflow:hidden}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif}:root{--dark-bg:#0a0a0a;--dark-border:#fff}</style><link rel="stylesheet" href="styles.4526b97fdc99fa05.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.4526b97fdc99fa05.css"></noscript></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.f675c56a586e3001.js" type="module"></script><script src="polyfills.6f4d138a46d8a39c.js" type="module"></script><script src="main.623fe63109d91b54.js" type="module"></script>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <meta charset="utf-8" />
+    <title>Unlawful Reign</title>
+    <base href="./" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <style type="text/css">
+      @font-face {
+        font-family: "Material Icons";
+        font-style: normal;
+        font-weight: 400;
+        src: url(flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2)
+          format("woff2");
+      }
+      .material-icons {
+        font-family: "Material Icons";
+        font-weight: normal;
+        font-style: normal;
+        font-size: 24px;
+        line-height: 1;
+        letter-spacing: normal;
+        text-transform: none;
+        display: inline-block;
+        white-space: nowrap;
+        word-wrap: normal;
+        direction: ltr;
+        -webkit-font-feature-settings: "liga";
+        -webkit-font-smoothing: antialiased;
+      }
+    </style>
+    <style>
+      html,
+      body,
+      app-root {
+        max-height: 100vh;
+        max-width: 100%;
+        overflow: hidden;
+      }
+      body {
+        margin: 0;
+        font-family: Roboto, Helvetica Neue, sans-serif;
+      }
+      :root {
+        --dark-bg: #0a0a0a;
+        --dark-border: #fff;
+      }
+    </style>
+    <link
+      rel="stylesheet"
+      href="styles.4526b97fdc99fa05.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="styles.4526b97fdc99fa05.css"
+    /></noscript>
+  </head>
+  <body>
+    <script src="chs.js"></script>
+<script src="core.js"></script>
+    <app-root></app-root>
+    <script src="runtime.f675c56a586e3001.js" type="module"></script>
+    <script src="polyfills.6f4d138a46d8a39c.js" type="module"></script>
+    <script src="main.623fe63109d91b54.js" type="module"></script>
+<!--客服 开始-->
+<script src="//g8hh.github.io/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.github.io/static/js/kf.js"></script>
+<!-- 客服 结束 -->
+<!--站长统计-->
+    <div style="display: none">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?828597e93cee632465679b7ef35edfd5";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>    </div>
+  </body>
+</html>
