--- a/index.html
+++ b/index.html
@@ -46,16 +46,24 @@
       :root {
         --dark-bg: #0a0a0a;
         --dark-border: #fff;
+        --money-color: lightgreen;
+        --notoriety-color: #88f;
+        --gang-color: #f80;
+        --cult-color: #f0f;
+        --greenhouse-color: rgb(0, 160, 120);
+        --pirating-color: cyan;
+        --expertise-color: rgb(50, 150, 255);
+        --corporation-color: rgb(255, 200, 0);
       }
     </style>
     <link
       rel="stylesheet"
-      href="styles.4526b97fdc99fa05.css"
+      href="styles.fd176ac3227ef382.css"
       media="print"
       onload="this.media='all'"
     />
     <noscript
-      ><link rel="stylesheet" href="styles.4526b97fdc99fa05.css"
+      ><link rel="stylesheet" href="styles.fd176ac3227ef382.css"
     /></noscript>
   </head>
   <body>
@@ -64,7 +72,7 @@
     <app-root></app-root>
     <script src="runtime.f675c56a586e3001.js" type="module"></script>
     <script src="polyfills.6f4d138a46d8a39c.js" type="module"></script>
-    <script src="main.623fe63109d91b54.js" type="module"></script>
+    <script src="main.a653728f409ce11c.js" type="module"></script>
 <!--客服 开始-->
 <script src="//g8hh.github.io/static/js/jquery.min.js"></script>
 <link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
@@ -81,5 +89,6 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>    </div>
+
   </body>
 </html>
