--- a/index.html
+++ b/index.html
@@ -1,78 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <meta charset="utf-8" />
-    <title>Unlawful Reign</title>
-    <base href="./" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <style type="text/css">
-      @font-face {
-        font-family: "Material Icons";
-        font-style: normal;
-        font-weight: 400;
-        src: url(flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2)
-          format("woff2");
-      }
-      .material-icons {
-        font-family: "Material Icons";
-        font-weight: normal;
-        font-style: normal;
-        font-size: 24px;
-        line-height: 1;
-        letter-spacing: normal;
-        text-transform: none;
-        display: inline-block;
-        white-space: nowrap;
-        word-wrap: normal;
-        direction: ltr;
-        -webkit-font-feature-settings: "liga";
-        -webkit-font-smoothing: antialiased;
-      }
-    </style>
-    <style>
-      html,
-      body,
-      app-root {
-        max-height: 100vh;
-        max-width: 100%;
-        overflow: hidden;
-      }
-      body {
-        margin: 0;
-        font-family: Roboto, Helvetica Neue, sans-serif;
-      }
-      :root {
-        --dark-bg: #0a0a0a;
-        --dark-border: #fff;
-        --money-color: lightgreen;
-        --notoriety-color: #88f;
-        --gang-color: #f80;
-        --cult-color: #f0f;
-        --greenhouse-color: rgb(0, 160, 120);
-        --pirating-color: cyan;
-        --expertise-color: rgb(50, 150, 255);
-        --corporation-color: rgb(255, 200, 0);
-      }
-    </style>
-    <link
-      rel="stylesheet"
-      href="styles.fd176ac3227ef382.css"
-      media="print"
-      onload="this.media='all'"
-    />
-    <noscript
-      ><link rel="stylesheet" href="styles.fd176ac3227ef382.css"
-    /></noscript>
-  </head>
-  <body>
-    <script src="chs.js"></script>
-<script src="core.js"></script>
-    <app-root></app-root>
-    <script src="runtime.f675c56a586e3001.js" type="module"></script>
-    <script src="polyfills.6f4d138a46d8a39c.js" type="module"></script>
-    <script src="main.a653728f409ce11c.js" type="module"></script>
+    <head>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+        <meta charset="utf-8">
+        <title>Unlawful Reign</title>
+        <base href="./">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <style type="text/css">
+            @font-face {
+                font-family: 'Material Icons';
+                font-style: normal;
+                font-weight: 400;
+                src: url(flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
+            }
+
+            .material-icons {
+                font-family: 'Material Icons';
+                font-weight: normal;
+                font-style: normal;
+                font-size: 24px;
+                line-height: 1;
+                letter-spacing: normal;
+                text-transform: none;
+                display: inline-block;
+                white-space: nowrap;
+                word-wrap: normal;
+                direction: ltr;
+                -webkit-font-feature-settings: 'liga';
+                -webkit-font-smoothing: antialiased;
+            }
+        </style>
+        <style>
+            *,:before,:after {
+                --tw-border-spacing-x: 0;
+                --tw-border-spacing-y: 0;
+                --tw-translate-x: 0;
+                --tw-translate-y: 0;
+                --tw-rotate: 0;
+                --tw-skew-x: 0;
+                --tw-skew-y: 0;
+                --tw-scale-x: 1;
+                --tw-scale-y: 1;
+                --tw-pan-x: ;
+                --tw-pan-y: ;
+                --tw-pinch-zoom: ;
+                --tw-scroll-snap-strictness: proximity;
+                --tw-gradient-from-position: ;
+                --tw-gradient-via-position: ;
+                --tw-gradient-to-position: ;
+                --tw-ordinal: ;
+                --tw-slashed-zero: ;
+                --tw-numeric-figure: ;
+                --tw-numeric-spacing: ;
+                --tw-numeric-fraction: ;
+                --tw-ring-inset: ;
+                --tw-ring-offset-width: 0px;
+                --tw-ring-offset-color: #fff;
+                --tw-ring-color: rgb(59 130 246 / .5);
+                --tw-ring-offset-shadow: 0 0 #0000;
+                --tw-ring-shadow: 0 0 #0000;
+                --tw-shadow: 0 0 #0000;
+                --tw-shadow-colored: 0 0 #0000;
+                --tw-blur: ;
+                --tw-brightness: ;
+                --tw-contrast: ;
+                --tw-grayscale: ;
+                --tw-hue-rotate: ;
+                --tw-invert: ;
+                --tw-saturate: ;
+                --tw-sepia: ;
+                --tw-drop-shadow: ;
+                --tw-backdrop-blur: ;
+                --tw-backdrop-brightness: ;
+                --tw-backdrop-contrast: ;
+                --tw-backdrop-grayscale: ;
+                --tw-backdrop-hue-rotate: ;
+                --tw-backdrop-invert: ;
+                --tw-backdrop-opacity: ;
+                --tw-backdrop-saturate: ;
+                --tw-backdrop-sepia: ;
+                --tw-contain-size: ;
+                --tw-contain-layout: ;
+                --tw-contain-paint: ;
+                --tw-contain-style:
+            }
+
+            *,:before,:after {
+                box-sizing: border-box;
+                border-width: 0;
+                border-style: solid;
+                border-color: #e5e7eb
+            }
+
+            :before,:after {
+                --tw-content: ""
+            }
+
+            html {
+                line-height: 1.5;
+                -webkit-text-size-adjust: 100%;
+                tab-size: 4;
+                font-family: ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji";
+                font-feature-settings: normal;
+                font-variation-settings: normal;
+                -webkit-tap-highlight-color: transparent
+            }
+
+            body {
+                margin: 0;
+                line-height: inherit
+            }
+
+            html,body,app-root {
+                max-height: 100vh;
+                max-width: 100%;
+                overflow: hidden
+            }
+
+            body {
+                margin: 0;
+                font-family: Roboto,Helvetica Neue,sans-serif
+            }
+
+            :root {
+                --dark-bg: #0a0a0a;
+                --dark-border: #fff;
+                --money-color: lightgreen;
+                --notoriety-color: #88f;
+                --gang-color: #f80;
+                --cult-color: #f0f;
+                --greenhouse-color: rgb(0, 160, 120);
+                --pirating-color: cyan;
+                --expertise-color: rgb(50, 150, 255);
+                --corporation-color: rgb(255, 224, 100);
+                --prestige-color: rgb(255, 100, 120);
+                --bounty-color: rgb(255, 180, 0)
+            }
+        </style>
+        <link rel="stylesheet" href="styles.455f48e213ff2ee2.css" media="print" onload="this.media='all'">
+        <noscript>
+            <link rel="stylesheet" href="styles.455f48e213ff2ee2.css">
+        </noscript>
+    </head>
+    <body>
+      <script src="chs.js"></script>
+      <script src="core.js"></script>
+        <app-root></app-root>
+        <script src="runtime.f675c56a586e3001.js" type="module"></script>
+        <script src="polyfills.6f4d138a46d8a39c.js" type="module"></script>
+        <script src="main.170b61b628c3b562.js" type="module"></script>
 <!--客服 开始-->
 <script src="//g8hh.github.io/static/js/jquery.min.js"></script>
 <link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
@@ -90,5 +167,5 @@ var _hmt = _hmt || [];
 })();
 </script>    </div>
 
-  </body>
+    </body>
 </html>
